--- a/index.css
+++ b/index.css
@@ -6,16 +6,45 @@
 
     }
 
-    #landing {
-        background-image: url(images/stardust/stardust.png);
-        background-size: cover;
-        background-repeat: none;
-        background-position: center;
+    #btn-back-to-top {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
     }
 
-    #tools-img {
+    #splash {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: white;
+        z-index: 2;
+        transition: opacity 2s;
+    }
+
+    #splash.fade {
+        opacity: 0;
+    }
+
+
+    #landing {
+        background-image: url(images/stardust/stardust.png);
+        animation: fall 10s linear infinite;
+    }
+
+    .tools-img {
         width: 120px;
     }
+
+    #facebook-icon:hover {
+        animation: sns 2s linear infinite;
+    }
+
+    #instagram-icon:hover {
+        animation: sns 2s linear infinite;
+    }
+
 
     #gmap {
         height: 40vh;
@@ -27,4 +56,35 @@
         background-size: cover;
         background-repeat: none;
         background-position: center;
+    }
+
+    @keyframes fall {
+        0% {
+            background-position: 0px 0px;
+            opacity: 1;
+        }
+
+        50% {
+            opacity: 0.9;
+        }
+
+        100% {
+            background-position: 798px 798px;
+            opacity: 1.0;
+        }
+    }
+
+    @keyframes sns {
+        0% {
+            transform: scale(1.0);
+        }
+
+        50% {
+            transform: scale(3.0);
+
+        }
+
+        100% {
+            transform: scale(1.0);
+        }
     }
