--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ html {
     height:100%;
 }
  
-.stack .gray{
+.stack .profilePic{
     position:absolute;
     top:0;
     left:0;
@@ -80,7 +80,8 @@ html {
     width:100%;
     max-height:100%;
     pointer-events:none;
-    filter:brightness(10%);
+    object-fit:cover;
+    filter:brightness(5%);
 
 }
 
